<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">一体化Shop</string>
    <string name="app_name_normal">一体化ShopNormal</string>
    <string name="app_name_self">一体化ShopSelf</string>

    <!-- 升级对话框 -->
    <string name="update_title">发现新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>
    <string name="update_no_update">当前已是最新版本</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">升级通知</string>

    <!-- 时间和日期 -->
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="days_ago">天前</string>
    <string name="weeks_ago">周前</string>
    <string name="year">年</string>
    <string name="month">个月</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>

    <!-- 支付密码对话框 -->
    <string name="pay_title">请输入支付密码</string>

    <string name="loading">加载中···</string>
    <string name="load_error">加载失败，请点击重试</string>

    <string name="footer_not_more">- The End -</string>
    <string name="srl_footer_nothing">没有更多数据了</string>

    <string name="jump_page_unknown_error">跳转界面出现未知异常</string>

    <!-- 分享 -->
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="wechat">微信</string>
    <string name="wechat_memory">朋友圈</string>
    <string name="qq_friends">QQ</string>
    <string name="qq_zone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="more">更多</string>
    <string name="cancel">取消</string>
    <string name="share_unknown_error">分享出现未知异常</string>
    <string name="your_phone_does_not_install_qq">您的手机还没有安装QQ</string>
    <string name="your_phone_does_not_install_wechat">您的手机还没有安装微信</string>
    <string name="your_phone_does_not_install_weibo">您的手机还没有安装微博</string>
    <string name="your_phone_does_not_install_qq_zone">您的手机还没有安装QQ空间</string>


</resources>