<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_10">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:gravity="center"
        android:text="@string/share"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/gray" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToWechatFriends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_wechat_black_30dp"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="@string/wechat"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/sp_10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShareToWeibo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="@string/weibo"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/sp_10"
            app:drawableTopCompat="@drawable/ic_share_weibo_black_30dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShareToQQ"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_qq_black_30dp"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="@string/qq_friends"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/sp_10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShareToQQzone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_qq_zone_black_30dp"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="@string/qq_zone"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/sp_10" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:padding="@dimen/dp_3"
                android:src="@drawable/ic_baseline_more_horiz_30"
                app:civ_circle_background_color="#d9d9d9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:text="@string/more"
                android:textColor="@color/grayDark"
                android:textSize="@dimen/sp_10" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/sp_14" />

</androidx.appcompat.widget.LinearLayoutCompat>